# wse_trader

./: Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
backend/: .gitignore  Cargo.toml  biznes.txt  links_mapping.yaml  makefile.toml  requirements.yaml
backend/docker/: Dockerfile
backend/src/: cli.rs  company.rs  errors.rs  lazy_regexps.rs  main.rs  ranked_companies.rs  requirements_reader.rs  results_writer.rs  urls.rs  urls_modifier.rs
common/: Cargo.toml
common/src/: artifacts.rs  lib.rs
common/src/types/: errors.rs  mod.rs  shared_types.rs
frontend/: .gitignore  Cargo.toml  makefile.toml
frontend/docker/: Dockerfile
frontend/html/: requirements.html
frontend/src/: cli.rs  main.rs  types.rs
mock_third_party/: Cargo.toml
mock_third_party/files/: MONNARI.txt  XTB.txt
mock_third_party/src/: main.rs
tests/: Cargo.toml
tests/src/: integration.rs
wse_trader/: .gitignore  Cargo.toml  links_mapping.yaml  requirements.yaml  resutls.txt  stock_requirements.toml
wse_trader/src/: company.rs  errors.rs  file_reader.rs  lazy_regexps.rs  main.rs  ranked_companies.rs  requirements.rs  requirements_reader.rs  results_writer.rs  urls_modifier.rs
