[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
http = "0.2.8"
httpmock = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_any = { version = "0.5", default-features = false, features = ["yaml", "toml"] }
table-extract = "0.2.2"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
csv = "1.1.6"
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
lazy-regex = "2.3.1"
futures = "0.3.25"
thiserror = "1.0.37"
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
actix-web = "4"
serde_json = "1.0"
wiremock = "0.5.18"

common = { path = "../common"}